@@ -1,5 +1,9 @@
 2011-06-14  Sebastien Binet  <sebastien.binet@cern.ch>
 
+	* tagging PyUtils-00-10-84
+	* preliminary work for better support for TAG files
+	* M python/AthFile/impl.py
+
 	* tagging PyUtils-00-10-83
 	* fix bug #83034
 	* do not propagate parent's os.environ for PYTHONINSPECT and
